# briefcast

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  build_tar.ps1  coverage  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml  whisperx.env.example
client/: addPodcast.html  backups.html  episodes.html  episodes_new.html  index.html  player.html  podcast.html  scripts.html  settings.html  tags.html
controllers/: controllers_test.go  downloads.go  episode_media.go  local_search.go  pages.go  podcast.go  settings.go  websockets.go
db/: base.go  config.go  config_test.go  db.go  dbfunctions.go  dbfunctions_test.go  migrations.go  migrations_test.go  podcast.go  query_helpers.go  search_helpers.go
docs/: ubuntu-install.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
model/: errors_test.go  queryModels_test.go
scripts/: feedparser_parse.py  mutagen_id3_extract.py  regression.ps1  whisperx_transcribe.py
service/: chapters.go  chapters_parse.go  chapters_parse_extra_test.go  chapters_test.go  download_manager.go  download_manager_test.go  download_state_test.go  downloadsService.go  feedparser.go  feedparser_test.go  fileService.go  file_helpers_test.go  gpodderService.go  hostLimiter.go  hostLimiter_test.go  id3.go  id3_test.go  integration_test.go  itunesService.go  local_search.go  local_search_test.go  log_helpers.go  naturaltime_test.go  podcastService.go  retention.go  retention_test.go  test_helpers_test.go  text_snippet.go  text_snippet_test.go  whisperx.go  (+7 more)
(+63 files in other folders)
